--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@ html {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -12,23 +13,35 @@ html {
 }
 
 body {
+  display: grid;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
 }
 
+/* Contains the brand and navbar */
 .nav-container {
   display: flex;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   flex-flow: row nowrap;
   width: 100%;
   align-items: center;
   border: solid red;
+  position: fixed;
+  top: 0;
+}
+
+.brand {
+  font-size: 24px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: white;
 }
 
 .navbar {
+  /* Flexbox configurations */
   display: flex;
   flex-direction: row;
-  background-color: white;
+  justify-content: flex-end;
+
   border: solid yellow;
   list-style: none;
   width: 100%;
@@ -36,26 +49,24 @@ body {
 }
 
 .navlink {
-  display: block;
   padding: 5px;
   float: none;
-  border: solid;
-}
-a {
-  width: 200px;
-  color: black;
-  text-decoration: none;
-  position: relative;
 }
 
-span::before {
+.nav-container a {
+  text-decoration: none;
+  position: relative;
+  color: white;
+}
+
+.navlink a::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: red;
+  background-color: gold;
   width: 100%;
   visibility: visible;
   -webkit-transform: scaleX(0);
@@ -63,8 +74,19 @@ span::before {
   -webkit-transition: all 0.3s ease-in-out 0s;
   transition: all 0.3s ease-in-out 0s;
 }
-span:hover::before {
+
+.navlink a:hover::before {
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
 }
+
+section .overlay {
+  height: 50px;
+}
+
+/* Mobile */
+
+/* Tablet */
+
+/* Desktop */
