--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
+/* Global Variables */
+:root {
+  --bg-color: black;
+  --primary-color: white;
+}
+
 /* Universal box sizing with inheritance. */
 html {
   box-sizing: border-box;
@@ -15,7 +21,7 @@ html {
 body {
   display: grid;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: black;
+  background-color: var(--bg-color);
 }
 
 /* Contains the brand and navbar */
@@ -33,13 +39,32 @@ body {
   font-size: 24px;
   font-weight: 900;
   text-transform: uppercase;
-  color: white;
+  color: var(--primary-color);
+}
+/* Menu button */
+.menu {
+  display: none;
+  flex-flow: row nowrap;
+  background-color: var(--bg-color);
+  color: var(--primary-color);
+}
+.menu-icon div {
+  width: 35px;
+  height: 5px;
+  background-color: var(--primary-color);
+  margin: 6px;
+  border-radius: 5px;
+}
+.menu span {
+  text-transform: uppercase;
+  font-size: 30px;
+  margin-top: 3px;
 }
 
 .navbar {
   /* Flexbox configurations */
   display: flex;
-  flex-direction: row;
+  flex-flow: row nowrap;
   justify-content: flex-end;
 
   border: solid yellow;
@@ -56,7 +81,7 @@ body {
 .nav-container a {
   text-decoration: none;
   position: relative;
-  color: white;
+  color: var(--primary-color);
 }
 
 .navlink a::before {
@@ -85,8 +110,77 @@ section .overlay {
   height: 50px;
 }
 
-/* Mobile */
-
 /* Tablet */
+@media only screen and (max-width: 768px) {
+  .menu {
+    display: flex;
+  }
+
+  .navbar {
+    display: none;
+  }
+}
 
 /* Desktop */
+
+[data-theme="dark"] {
+  --primary-color: black;
+  --bg-color: white;
+}
+
+/*Simple css to style it like a toggle switch*/
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+  em {
+    margin-left: 10px;
+    font-size: 1rem;
+  }
+}
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  background-color: red;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: 1s;
+  width: 26px;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: green;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 1px;
+}
+
+.slider:before {
+}
