--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
 :root {
   --bg-color: black;
   --primary-color: white;
+  --content-width: 100%;
 }
 
 /* Universal box sizing with inheritance. */
@@ -19,17 +20,23 @@ html {
 }
 
 body {
-  display: grid;
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%;
   font-family: Arial, Helvetica, sans-serif;
   background-color: var(--bg-color);
 }
 
+header {
+  width: var(--content-width);
+}
+
 /* Contains the brand and navbar */
 .nav-container {
-  display: flex;
+  display: inline-flex;
   flex-flow: row nowrap;
-  background-color: var(--bg-color);
-  width: 100%;
+  background-color: gray;
+  width: inherit;
   align-items: top;
   position: fixed;
   top: 0;
@@ -40,13 +47,15 @@ body {
   font-weight: 900;
   text-transform: uppercase;
   color: var(--primary-color);
+  margin-left: 7px;
 }
 
 .navbar {
   /* Flexbox configurations */
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-end;
+  flex-flow: column nowrap;
+  align-items: flex-end;
+  justify-content: center;
   width: 100%;
   padding: 0;
 }
@@ -160,6 +169,31 @@ section .overlay {
 
   .navbar-menu-list {
     display: flex;
+  }
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  body {
+    --content-width: 1200px;
+    max-width: var(--content-width);
+    margin: auto;
+    border: solid red;
   }
 }
 
