--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,5 @@
+@import "../css/style.css";
+
 $max-cols: 6;
 $ft-item-cols: 1;
 $ft-item-padding: 5px;
@@ -10,7 +12,7 @@ $space-between: 20px;
 footer {
   display: grid;
   grid-template-columns: repeat($max-cols, 1fr);
-  background-color: rgb(60, 64, 67);
+  background-color: var(--content-bg-color);
 }
 
 footer a {
@@ -38,6 +40,7 @@ footer a {
 
 .ft-item-info ul {
   display: flex;
+  list-style: none;
   align-items: flex-start;
 }
 
