--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@
   --content-width: 100%;
   --content-bg-color: rgb(60, 64, 67);
   --navlink-margin: 50px;
+  --section-margin: 10px;
 }
 
 /* Universal box sizing with inheritance. */
@@ -173,6 +174,29 @@ ul {
   text-align: center;
 }
 
+.owl-item {
+  border: solid white;
+}
+
+.owl-dots {
+  border: solid red;
+  text-align: center;
+}
+
+.owl-dot span {
+  display: block;
+  /* background: none repeat scroll 0 0 #869791 ; */
+  background-color: white;
+  height: 12px;
+  width: 12px;
+  margin: 5px 7px;
+  border-radius: 20px;
+  border: solid black;
+}
+
+.active span {
+  background-color: gold;
+}
 .about-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -190,7 +214,7 @@ ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column: span 4;
-  margin-left: 10px;
+  margin-left: var(--section-margin);
 }
 
 .about-info p {
@@ -242,8 +266,8 @@ ul {
   background-color: rgb(26, 26, 26);
   border-radius: 10px;
   padding: 15px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: var(--section-margin);
+  margin-right: var(--section-margin);
 }
 
 .resume-item > .date {
@@ -269,15 +293,41 @@ ul {
 }
 
 .contact-container .message {
-  margin: 0;
+  margin: 0 var(--section-margin) 30px var(--section-margin);
   justify-self: center;
   color: hsl(0, 0%, 50%);
 }
 
-.contact-container .form {
-  border: solid white;
+.contact-container form {
+  display: grid;
+  width: 50%;
+  grid-template-columns: 5em repeat(2, 1fr);
+  row-gap: 8px;
   justify-self: center;
-  background-color: gold;
+}
+
+.contact-container form > label {
+  text-align: right;
+  margin-right: 1ex;
+}
+
+.contact-container form > input {
+  grid-column: span 2;
+}
+
+.contact-container form > textarea {
+  grid-column: span 2;
+  resize: none;
+  height: 100px;
+}
+
+input#contact-form-message {
+  height: 100px;
+}
+
+.contact-container button {
+  grid-column: span 3;
+  justify-self: center;
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -325,68 +375,4 @@ ul {
   :root {
     --content-width: 1200px;
   }
-}
-
-/* Desktop */
-
-[data-theme="dark"] {
-  --primary-color: black;
-  --bg-color: white;
-}
-
-/*Simple css to style it like a toggle switch*/
-.theme-switch-wrapper {
-  display: flex;
-  align-items: center;
-  em {
-    margin-left: 10px;
-    font-size: 1rem;
-  }
-}
-.theme-switch {
-  display: inline-block;
-  height: 34px;
-  position: relative;
-  width: 60px;
-}
-
-.theme-switch input {
-  display: none;
-}
-
-.slider {
-  background-color: red;
-  bottom: 0;
-  cursor: pointer;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.slider:before {
-  background-color: #fff;
-  bottom: 4px;
-  content: "";
-  height: 26px;
-  left: 4px;
-  position: absolute;
-  transition: 1s;
-  width: 26px;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: green;
-}
-
-input:checked + .slider:before {
-  transform: translateX(26px);
-}
-
-.slider.round {
-  border-radius: 1px;
-}
-
-.slider:before {
 }
