--- a/src/scss/skills.scss
+++ b/src/scss/skills.scss
@@ -22,7 +22,7 @@ $first-col-width: 11rem;
 }
 
 .skills-feature:hover {
-  background-color: gold;
+  background-color: var(--theme-color);
   letter-spacing: 0.0625rem;
   color: black;
 }
@@ -32,15 +32,19 @@ $first-col-width: 11rem;
   padding-bottom: 2px;
 }
 
-.skills-feature:hover::after {
+@mixin selected-feature-highlight {
   content: "";
   display: block;
   position: absolute;
   left: 100%;
   top: 0%;
   border-top: 11px solid transparent;
-  border-left: 5px solid gold;
+  border-left: 5px solid var(--theme-color);
   border-bottom: 11px solid transparent;
+}
+
+.skills-feature:hover::after {
+  @include selected-feature-highlight();
 }
 
 .skills-feature-items {
@@ -74,17 +78,16 @@ ul.feature-item-list li.feature-item {
 }
 
 .selected {
-  background-color: gold;
+  background-color: var(--theme-color);
   color: black;
 }
 
 .selected:after {
-  @extend .skills-feature:hover::after;
+  @include selected-feature-highlight();
 }
 
 @media only screen and (min-width: 1200px) {
   .feature-item-list {
-    // TODO: need to convert 1200px to total width
-    width: calc(1200px - #{$first-col-width});
+    width: calc(var(--content-width) - #{$first-col-width});
   }
 }
