--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -9,6 +9,7 @@ $hire-font-size: 20px;
   height: 500px;
   background-size: 100%;
   background-repeat: no-repeat;
+  z-index: -1;
 }
 
 .text-container {
